--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {erl_opts, [debug_info]}.
 {eunit_opts, [verbose]}.
 {deps, [
-    {pgapp, {git, "https://github.com/lukyanov/pgapp.git", {branch, "nested-transactions"}}},
+    {pgapp, {git, "https://github.com/sergebond/pgapp.git", {branch, "master"}}},
     {sqerl, {git, "https://github.com/lukyanov/sqerl.git", {branch, "master"}}}
 ]}.
 
